remove mta metadata in undeploy